[package]
name = "bevy_lua_entity"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16"
mlua = { version = "0.10", features = ["lua54", "send", "vendored", "serialize"] }
serde = "1.0"
serde_json = "1.0"

# Optional dependency for physics example
bevy_rapier2d = { version = "0.31", features = ["serde-serialize"], optional = true }

[features]
default = []
# Enable automatic reflection-based bundle spawning
auto-reflection = []

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "sprites"
path = "examples/sprites.rs"

[[example]]
name = "button"
path = "examples/button.rs"

[[example]]
name = "physics_rapier"
path = "examples/physics_rapier/main.rs"
required-features = ["bevy_rapier2d"]

