[workspace]
members = [
    "bevy-lua-ecs",
    "Hello"
]
resolver = "2"

[workspace.dependencies]
bevy = "0.17"
mlua = { version = "0.10", features = ["lua54", "send", "vendored", "serialize"] }
serde = "1.0"
serde_json = "1.0"
bevy_rapier2d = { version = "0.31", features = ["serde-serialize"] }
bevy_replicon = "0.35"
bevy_replicon_renet = "0.11"
bevy_renet = "2.0"
renet = "0.0.16"
lightyear = { version = "0.25", features = ["udp", "netcode"] }
