[workspace]
members = [
    "bevy-lua-ecs",
    "Hello"
]
resolver = "2"

[workspace.dependencies]
bevy = "0.17"
mlua = { version = "0.10", features = ["lua54", "send", "vendored", "serialize"] }
serde = "1.0"
serde_json = "1.0"
bevy_rapier2d = { version = "0.32", features = ["serde-serialize"] }
bevy_rapier3d = { version = "0.32", features = ["serde-serialize"] }
bevy_replicon = { version = "0.36", default-features = false }
bevy_replicon_renet = { version = "0.12" }
bevy_renet = { version = "3.0", default-features = false, features = ["netcode"] }
renet = "1.2"
lightyear = { version = "0.25", features = ["udp", "netcode"] }
lightyear_examples_common = { version = "0.25" }
bevy_mod_xr = { version = "0.4.0" }