[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "hello"
path = "src/main.rs"

[package.metadata.lua_resources]
types = [
    # Core renet types (using canonical renet paths for auto-discovery)
    "renet::RenetClient",
    "renet::RenetServer",
    
    # Transport layer types
    "bevy_renet::netcode::NetcodeServerTransport",
    "bevy_renet::netcode::NetcodeClientTransport",
    
    # Authentication and configuration
    "bevy_renet::netcode::ServerAuthentication",
    "bevy_renet::netcode::ClientAuthentication",
    "bevy_renet::netcode::ConnectToken",
    
    # Network configuration
    "renet::ConnectionConfig",
    "renet::ChannelConfig",
    "renet::SendType",
]

constructors = [
    # Test constructor auto-discovery
    "renet::ConnectionConfig::default",
]

# Bitflags types for automatic registration - declare flag variants here
# These get generated into register_auto_bitflags() for runtime resolution
[package.metadata.lua_bitflags]
TextureUsages = ["COPY_SRC", "COPY_DST", "TEXTURE_BINDING", "STORAGE_BINDING", "RENDER_ATTACHMENT"]

[features]
# Unified default for demos - maximizes build cache reuse
default = ["all-plugins"]
all-plugins = ["physics", "tiled", "networking", "ufbx"]

# Core feature modules
physics = ["dep:bevy_rapier2d"]
physics3d = ["dep:bevy_rapier3d"]
tiled = ["dep:bevy_ecs_tiled"]
networking = ["dep:bevy_replicon", "dep:bevy_replicon_renet", "dep:bevy_renet", "dep:renet", "dep:serde", "dep:mlua", "dep:notify"]
ufbx = ["dep:bevy_ufbx"]

# Optional heavy features (trigger rebuild when used)
bevy_mod_xr = ["dep:bevy_mod_xr"]
replicon_server = ["bevy_replicon/server"]
replicon_client = ["bevy_replicon/client"]
lightyear_net = [
    "dep:lightyear", 
    "dep:lightyear_examples_common",
    "dep:serde", 
    "dep:mlua",
    "lightyear/netcode",
    "lightyear/interpolation",
    "lightyear/prediction",
    "lightyear/replication",
    "lightyear/client",
    "lightyear/server",
    "lightyear/udp",
    "lightyear/std",
    "lightyear_examples_common/client",
    "lightyear_examples_common/server",
    "lightyear_examples_common/gui",
    "lightyear_examples_common/netcode",
    "lightyear_examples_common/udp"
]
bevy_rapier2d = ["dep:bevy_rapier2d"]
renet_netcode = []

[dependencies]
bevy = { workspace = true, features = ["default"] }
bevy-lua-ecs = { path = "../bevy-lua-ecs", features = ["auto-bindings"] }
bevy_rapier2d = { version = "0.32", features = ["serde-serialize"], optional = true }
bevy_rapier3d = { version = "0.32", features = ["serde-serialize"], optional = true }
bevy_ecs_tiled = { version = "0.10", optional = true }
bevy_replicon = { workspace = true, optional = true }
bevy_replicon_renet = { workspace = true, optional = true }
bevy_renet = { workspace = true, optional = true }
renet = { workspace = true, optional = true }
lightyear = { workspace = true, optional = true }
lightyear_examples_common = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }  # Required for replicon_lua
bincode = "1.3"  # Required for renet_lua message serialization
bytes = "1"  # Required for Renet message types
mlua = { workspace = true, optional = true }
notify = { version = "6.1", optional = true }
bevy_mod_xr = { workspace = true, optional = true }
uuid = "1.11"  # For PointerId::Custom in VR controller raycasting
rand = "0.8"
clap = { version = "4.1", features = ["derive"] }
fastrand = "2.3"
fastrand-contrib = "0.1"
pathfinding = "4.14"
bevy_mod_openxr = "0.4.0"
openxr = "0.19.0"
bevy_ufbx = { workspace = true, optional = true }
bevy_ui_text_input = "0.6"
rfd = "0.15"

[[example]]
name = "networking"
path = "examples/networking.rs"
required-features = ["networking"]

[[example]]
name = "lightyear_chat"
path = "examples/lightyear_chat.rs"
required-features = ["lightyear_net"]

[[example]]
name = "lightyear_messaging"
path = "examples/lightyear_messaging.rs"
required-features = ["lightyear_net"]

[[example]]
name = "replicon_renet_simple_button"
path = "examples/replicon_renet_simple_button.rs"
required-features = ["replicon_server", "replicon_client", "renet_netcode"]

[[example]]
name = "physics_3d"
path = "examples/physics_3d.rs"
required-features = ["physics3d"]

[[example]]
name = "vr_simple"
path = "examples/vr_simple.rs"
required-features = ["bevy_mod_xr"]

[[example]]
name = "vr_ui_panel"
path = "examples/vr_ui_panel.rs"
required-features = ["bevy_mod_xr"]

[[example]]
name = "vr_lua_host"
path = "examples/vr_lua_host.rs"
required-features = ["bevy_mod_xr", "networking"]

[[example]]
name = "replicon_renet_button"
path = "examples/replicon_renet_button.rs"
required-features = ["networking"]

[[example]]
name = "asset_server"
path = "examples/asset_server.rs"
required-features = ["networking"]

[[example]]
name = "asset_client"
path = "examples/asset_client.rs"
required-features = ["networking"]

[[test]]
name = "network_asset_tests"
path = "tests/integration/network_asset_tests.rs"
required-features = ["networking"]
