[package]
name = "bevy-lua-ecs"
version = "0.1.0"
edition = "2021"

[package.metadata.lua_events]
types = [
    "bevy::window::CursorMoved",
    "bevy::window::FileDragAndDrop",
    "bevy::window::WindowResized",
    "bevy::window::WindowFocused",
    "bevy::window::WindowClosed",
    "bevy::input::keyboard::KeyboardInput",
    "bevy::input::mouse::MouseButtonInput",
    "bevy::input::mouse::MouseWheel",
    "bevy::input::mouse::MouseMotion",
]

[lib]
name = "bevy_lua_ecs"
path = "src/lib.rs"

[build-dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
toml = "0.8"

[dependencies]
bevy = { workspace = true }
mlua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Optional dependency for physics example
bevy_rapier2d = { workspace = true, optional = true }

[features]
default = []
# Enable automatic reflection-based bundle spawning
auto-reflection = []
# Enable automatic resource method binding generation
auto-bindings = []

# Feature alias for physics example compatibility
bevy_rapier2d = ["dep:bevy_rapier2d"]

[[example]]
name = "physics_rapier"
path = "examples/physics_rapier/main.rs"
required-features = ["bevy_rapier2d"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "button"
path = "examples/button.rs"

[[example]]
name = "hot_reload"
path = "examples/hot_reload.rs"

[[example]]
name = "sprites"
path = "examples/sprites.rs"
