[package]
name = "bevy-lua-ecs"
version = "0.1.0"
edition = "2021"

[lib]
name = "bevy_lua_ecs"
path = "src/lib.rs"

[build-dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"

[dependencies]
bevy = { workspace = true, features = ["file_watcher"] }
mlua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = "1.11"
rayon = "1.10"

# Optional dependency for physics example
bevy_rapier2d = { workspace = true, optional = true }

[features]
default = ["parallel-systems"]
# Enable automatic reflection-based bundle spawning
auto-reflection = []
# Enable automatic resource method binding generation
auto-bindings = []
# Enable parallel execution of instanced Lua systems (rayon)
parallel-systems = []

# Feature alias for physics example compatibility
bevy_rapier2d = ["dep:bevy_rapier2d"]

[[example]]
name = "physics_rapier"
path = "examples/physics_rapier/main.rs"
required-features = ["bevy_rapier2d"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "button"
path = "examples/button.rs"

[[example]]
name = "hot_reload"
path = "examples/hot_reload.rs"

[[example]]
name = "sprites"
path = "examples/sprites.rs"
